fixed link text overflowing

--- a/src/css/App.less
+++ b/src/css/App.less
@@ -48,6 +48,7 @@
     }
     .link-container{
       padding: 0 10px;
+      overflow-wrap: anywhere;
     }
   }
 
